complate working code

--- a/scs_lock_year/static/description/index.html
+++ b/scs_lock_year/static/description/index.html
@@ -31,7 +31,7 @@
                 <a href="https://www.serpentcs.com" target="_blank">
                     <img src="header-logo.png" alt="SerpentCS Logo" class="serpentcs-logo" />
                 </a>
-            </div>
+            </div>  
         </div>
         <section class="oe_container">
             <div class="o_equal_col_sm position-relative overflow-hidden shadow"
@@ -91,7 +91,7 @@
                                 <img src="restricted.png" style="width: 20%;" alt="Icon" />
                             </div>
                             <div>
-							<h5 class="card-title" style="font-family: Poppins; text-align: center;margin-top:10px"> Order Update Restrictions
+							<h5 class="card-title" style="font-family: Poppins; text-align: center;margin-top:10px"> Update Restrictions
                                 </h5>
                                 <p class="card-text" style="font-size: 17px;margin-top:20px;text-align: center;"> Prevents updates to orders if the current date exceeds the configured lock date, while allowing updates to selected fields.</p>
                             </div>
